# FastAPI

fastapi-sample/: .env.example  pyproject.toml
fastapi-sample/app/: main.py
fastapi-sample/app/core/: config.py  logger.py  middleware.py  security.py
fastapi-sample/app/db/: mongo.py  redis.py
